# DUAT-Project-Managment

./: .gitignore  README.md  backend.spec  config.py  electron-builder.yml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
analysis/: __init__.py  dashboard.py  lag_analysis.py  manpower.py  performance.py  scurve.py
backend/: __init__.py  main.py  services.py
backend/routers/: config.py  dashboard.py  export.py  keyword.py  lag.py  manpower.py  parse.py  performance.py  scurve.py
docs/: algorithm.md  architecture.md  dev-setup-guide.md  e2e-test-plan.md  field-mapping-spc.md  prd.md  reconstruction-plan.md  todolist.md  uat-test-plan.md
electron/: loading.html  main.js  preload.js  sidecar.js  vitest.config.js
electron/__tests__/: sidecar.test.js
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  electron.d.ts
frontend/src/components/: Layout.tsx  LoadingOverlay.tsx  NotificationToast.tsx  Sidebar.tsx
frontend/src/lib/: api.ts  i18n.ts  store.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  GeneratePage.tsx  HomePage.tsx  KeywordSearchPage.tsx  LagAnalysisPage.tsx  ManpowerPage.tsx  (+1 more)
parsers/: __init__.py  docx_parser.py  manpower_parser.py
scripts/: build.py  pyi_rth_duat.py
tests/: conftest.py  test_config.py  test_dashboard.py  test_dashboard_api.py  test_docx_parser.py  test_excel_export.py  test_lag_analysis.py  test_manpower.py  test_manpower_parser.py  test_performance.py  test_scurve.py  test_services.py
utils/: __init__.py  excel_export.py
(+9 files in other folders)
